<resources>
    <string name="app_name">SpaceDim</string>
    <string name="background">background</string>
    <string name="start_the_game">start the game</string>
    <string name="title">Title</string>
    <string name="titletext">TextView</string>
    <string name="exit_the_game">exit the game</string>
    <string name="dim_space_team">DIM Space Team</string>
    <string name="table">table</string>
    <string name="enter_name">Enter name</string>
    <string name="window">window</string>
    <string name="room_number">room number</string>
    <string name="room_1234">Room # 1234</string>
    <string name="players">Players</string>
    <string name="join_room">Join room</string>
    <string name="dashboard_menu">dashboard menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="we_are_under_attack_deploy_max_shield">We are under attack ! Deploy max shield !</string>
    <string name="damage_icon">damage_icon</string>
    <string name="armor_icon">armor_icon</string>
    <string name="speed_icon">speed_icon</string>
    <string name="adjust_speed">adjust speed</string>
    <string name="speed_text">speed text</string>
    <string name="speed">Speed</string>
    <string name="shield_title">shield title</string>
    <string name="shield">Shield</string>
    <string name="lose_screen">Lose Screen</string>
    <string name="win_screen">Win screen</string>
    <string name="damage_title">damage title</string>
    <string name="weapon">Weapon</string>
    <string name="shield_front">Shield front</string>
    <string name="shield_back">Shield back</string>
    <string name="fire">Fire</string>
    <string name="shield_side">Shield side</string>
    <string name="player_1_name">player 1 name</string>
    <string name="ok_btn">ok_btn</string>
    <string name="win_table">win table</string>
    <string name="win_title">win title</string>
    <string name="win_score">win_score</string>
    <string name="exit_button">exit_button</string>
    <string name="win_replay_button">win_replay_button</string>
</resources>