<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/dashboard_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/dashboard_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dashboard_menu"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/window_long" />

    <TextView
        android:id="@+id/dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/dashboard_menu"
        app:layout_constraintEnd_toEndOf="@id/dashboard_menu"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@id/dashboard_menu"
        app:layout_constraintTop_toTopOf="@+id/dashboard_background"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/dashboard_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/we_are_under_attack_deploy_max_shield"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <ImageView
        android:id="@+id/dashboard_damage_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/damage_icon"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_background"
        app:layout_constraintEnd_toEndOf="@id/dashboard_menu"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="@id/dashboard_menu"
        app:layout_constraintTop_toTopOf="@id/dashboard_menu"
        app:layout_constraintVertical_bias="0.352"
        app:srcCompat="@drawable/damage_icon" />

    <TextView
        android:id="@+id/dashboard_damage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/damage_title"
        android:fontFamily="@font/krona_one"
        android:text="@string/weapon"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/dashboard_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/dashboard_fire_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/fire"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <ImageView
        android:id="@+id/dashboard_armor_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/armor_icon"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_background"
        app:layout_constraintEnd_toEndOf="@id/dashboard_menu"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="@id/dashboard_menu"
        app:layout_constraintTop_toTopOf="@id/dashboard_menu"
        app:layout_constraintVertical_bias="0.549"
        app:srcCompat="@drawable/armor_icon" />

    <TextView
        android:id="@+id/dashboard_armor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shield_title"
        android:fontFamily="@font/krona_one"
        android:text="@string/shield"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="@+id/dashboard_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Switch
        android:id="@+id/dashboard_shield_switch_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:minHeight="48dp"
        android:switchMinWidth="75dp"
        android:text="@string/shield_front"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <Switch
        android:id="@+id/dashboard_shield_switch_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:minHeight="48dp"
        android:switchMinWidth="75dp"
        android:text="@string/shield_back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Switch
        android:id="@+id/dashboard_shield_switch_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:minHeight="48dp"
        android:switchMinWidth="75dp"
        android:text="@string/shield_side"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <ImageView
        android:id="@+id/dashboard_speed_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/speed_icon"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_background"
        app:layout_constraintEnd_toEndOf="@id/dashboard_menu"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="@id/dashboard_menu"
        app:layout_constraintTop_toTopOf="@id/dashboard_menu"
        app:layout_constraintVertical_bias="0.755"
        app:srcCompat="@drawable/speed_icon" />

    <TextView
        android:id="@+id/dashboard_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/speed_text"
        android:fontFamily="@font/krona_one"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/dashboard_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <SeekBar
        android:id="@+id/speed_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        android:contentDescription="@string/adjust_speed"
        android:focusable="true"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_background"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="@id/dashboard_background"
        app:layout_constraintTop_toTopOf="@id/dashboard_background"
        app:layout_constraintVertical_bias="0.731" />

    <Button
        android:id="@+id/dashboard_lose_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/lose_screen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/dashboard_win_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/win_screen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_background"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</android.support.constraint.ConstraintLayout>